# FMLM

./: .gitignore  LICENSE  README.md  RSMPEG_API_DOCUMENTATION.md  package.json  progress.md  run-tauri-dev.ps1  vite.config.ts
.github/instructions/: general.instructions.md  vuejs-base.instructions.md
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  db_commands.rs  file_commands.rs  lib.rs  main.rs  media_info.rs  scanner.rs  thumbnail.rs  thumbnail_commands.rs
src/components/: DirectorySelector.vue  FolderSidebar.vue  MediaInfoPanel.vue  ThumbnailGrid.vue
src/composables/: useDatabase.ts  useMediaScanner.ts  useResizable.ts  useThumbnails.ts  useWindowPersistence.ts
