[package]
name = "fmlm"
version = "0.1.0"
description = "File & Media Library Manager - A desktop application for organizing and browsing photos and videos"
authors = ["gabrielfantin"]
edition = "2021"
license = "MIT"
repository = "https://github.com/gabrielfantin/FMLM"
keywords = ["tauri", "media", "photos", "videos", "organizer"]
categories = ["multimedia", "filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fmlm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2.0.17"

